// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render completed todo: <strike> 1`] = `
<div
  data-testid="todo-2"
>
  <strike>
    <h1>
      make dinner
    </h1>
  </strike>
</div>
`;

exports[`matches snapshot 1`] = `
<div
  data-testid="todo-1"
>
  <h1>
    wash dishes
  </h1>
</div>
`;
